# agent_clearinghouse_v1

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  simulation.py
docs/: DOCUMENTATION.md
src/agentic_clearinghouse/: __init__.py  config.py  logging_config.py  main.py
src/agentic_clearinghouse/api/: deps.py  middleware.py
src/agentic_clearinghouse/api/routes/: escrow.py  health.py
src/agentic_clearinghouse/domain/: __init__.py  enums.py  exceptions.py  state_machine.py  verifier_protocol.py
src/agentic_clearinghouse/infrastructure/: redis_client.py
src/agentic_clearinghouse/infrastructure/database/: __init__.py  engine.py  orm_models.py  repositories.py
src/agentic_clearinghouse/infrastructure/migrations/: env.py
src/agentic_clearinghouse/mcp_server/: tools.py
src/agentic_clearinghouse/orchestration/: __init__.py  escrow_graph.py
src/agentic_clearinghouse/schemas/: __init__.py  escrow.py
src/agentic_clearinghouse/services/: __init__.py  escrow_service.py  payment_service.py  verification_service.py
src/agentic_clearinghouse/verifiers/: __init__.py  code_execution.py  schema_validator.py  semantic.py
tests/: conftest.py
tests/test_domain/: test_enums.py  test_state_machine.py
tests/test_verifiers/: test_code_execution.py  test_factory.py  test_integration.py  test_schema_validator.py  test_semantic.py
